# PowerDNS-Admin-NG

./: .gitignore  README.md  docker-compose.yml  package-lock.json  pyproject.toml  requirements.txt  run.py  update_accounts.py  update_zones.py
.claude/: settings.local.json
.github/: FUNDING.yml
.github/workflows/: ci.yml
configs/: development.py  test.py
deploy/kubernetes/: configmap.yml
docker/: Dockerfile  entrypoint.sh
docker-test/: Dockerfile
frontend/: next.config.ts  package-lock.json  package.json  tailwind.config.ts
migrations/: env.py
powerdnsadmin/: __init__.py  app.py  decorators.py  default_config.py  docker_config.py
powerdnsadmin/api/: deps.py
powerdnsadmin/core/: config.py  database.py  logging.py
powerdnsadmin/lib/: captcha.py  certutil.py  helper.py  history.py  password_policy.py  settings.py  utils.py
powerdnsadmin/models/: __init__.py  account.py  api_key.py  base.py  domain.py  domain_setting.py  domain_template.py  domain_template_record.py  history.py  record.py  role.py  server.py  sessions.py  setting.py  user.py
powerdnsadmin/routes/: api.py  domain.py  index.py
powerdnsadmin/schemas/: __init__.py  account.py  api_key.py  auth.py  record.py  role.py  setting.py  user.py  zone.py
powerdnsadmin/services/: __init__.py  azure.py  base.py  email.py  github.py  google.py  oidc.py  pdns_client.py  saml.py  token.py
powerdnsadmin/web/: __init__.py  callbacks.py  deps.py  errors.py  middleware.py  session.py
tests/: conftest.py
tests/unit/: conftest.py  test_fastapi_app.py  test_fastapi_deps.py  (+2 more)
(+87 files in other folders)
